<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.edu.cetis125.androidoperadoresaritmeticos.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/cetis125_logo"
        android:textAlignment="center" />
    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tDescripcion"
        />
    <TextView
        android:id="@+id/tvIntegrantes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tIntegrantes"
        />
    <Button
        android:id="@+id/btIngresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tIngresar"/>

</LinearLayout>
